# c-lang-period1

ex_20/: debug.c  debug.h  main.c  program
exercises/: exercise_1.c  exercise_10  exercise_10.c  exercise_11  exercise_11.c  exercise_12  exercise_12.c  exercise_13.c  exercise_13_text_2.txt  exercise_14  exercise_14.c  exercise_14_text_1.txt  exercise_15  exercise_15.c  exercise_16  exercise_16.c  exercise_17  exercise_17.c  exercise_18  exercise_18.c  exercise_19  exercise_19.c  exercise_2  exercise_2.c  exercise_21  exercise_21.c  exercise_3  exercise_3.c  exercise_4  exercise_4.c  exercise_5  exercise_5.c  exercise_6  exercise_6.c  exercise_7  exercise_7.c  exercise_8  exercise_8.c  exercise_9.c  text1.txt
project_1/: functions.h  main.c  program  task.txt  temperatures.csv
project_v1/cmakeQuickStart/: CMakeLists.txt  functions.c
